--- a/portfoilo.css
+++ b/portfoilo.css
@@ -53,6 +53,10 @@ ul{
    justify-content: space-between;
 }
 
+.fa-solid{
+    display: none;
+}
+
 .hero2-img{
     width: 540px;
     height: 500px;
@@ -203,4 +207,37 @@ margin-top: 70px;
     gap: 50px;
     margin-right: 900px;
     color: white;
+}
+
+@media only screen and (max-width:311px) {
+
+    body{background-color: rgb(255, 255, 255);}
+
+    .portfoilo-list{
+        display: none;
+    }
+
+    .fa-solid{
+        display: inline-block;
+    }
+
+    .nav-img{
+        width: 200px;
+    }
+
+    .hero2, .hero3{
+        flex-direction: column;
+    }
+
+    .hero2-img{
+        width: 1140px;
+        margin-left: 190px;
+    }
+
+    .manage{
+        width: 1340px;
+        margin-top: 150px;
+        margin-right: 500px;
+    }
+
 }
